# Otus_2023_task_4

./: CMakeLists.txt  LICENSE  README.md  print_ip.cpp
